--- a/css/extras.css
+++ b/css/extras.css
@@ -50,7 +50,7 @@ p a:hover {
 }
 .container {
 	position: relative;
-	background-image: url(../images/green.jpg);
+	background-image: url(../images/b1.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
